--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My First Website</title>
+        <meta name="author" content="Carter Forrar-Paul">
+        <title>CE Carter | Web Developer</title>
     </head>
     <body>
-       Hello, World, and welcome to my first website!
+       <p>Hello, World, and welcome to my first website!</p>
+       <p>I will be back with more content soon, so please stay tuned!</p>
     </body>
 </html>
