--- a/letter -markup/index.html
+++ b/letter -markup/index.html
@@ -76,7 +76,7 @@ Dover, CT9 XXX<br>
 
                                                     <p>Please let me know if this is ok, and if so which start date you would prefer.</p>
 
-                                                    <p>You can find more information about important university dates on our website.</p>
+                                                    <p>You can find more information about <a href="https://Example.com" title="University dates for new Students">important university dates on our website</a>.</p>
 
 
                                                     <h2>Subjects of study</h2>
@@ -98,7 +98,7 @@ Dover, CT9 XXX<br>
                                                     <dt>Polynesian chicken dance</dt>
 <dd>A little known but very influential dance dating back as far as <abbr title= "300 Years Before Christ"300BC</abbr>, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dd>
                                                     <dt>Icelandic brownian shuffle</dt>
-<dd>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as <a href=https://example.com" title="Videos demonstrating the art of twerking">Twerking</a>.</dd>
+<dd>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.</dd>
                                                       <dt>Arctic robot dance</dt>
 <dd>An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by <em>inhabitants</em> of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</dd>
 
