--- a/letter -markup/index.html
+++ b/letter -markup/index.html
@@ -7,7 +7,7 @@
                                                     <title>Awesome science apllication correspondance</title>
     <style> 
                                                     html {
-                                                    font-size:16p }
+                                                    font-size:16px }
                                                     body {
                                                           max-width: 800px;
                                                           margin: 0 auto;
