--- a/letter -markup/index.html
+++ b/letter -markup/index.html
@@ -7,35 +7,32 @@
                                                     <title>Awesome science apllication correspondance</title>
     <style> 
                                                     html {
-                                                    font-size:16px }
-                                                    body {
-                                                          max-width: 800px;
-                                                          margin: 0 auto;
-                                                    }
-                                                    .sender-column {
-                                                           text-align: right;
-                                                    }
-                                                    h1 {
-                                                      font-size: 1.5rem;
-                                                    }
-                                                    h2 { 
-                                                       font-size: 1.3rem;}
-                                                    p,ul,ol,dl,address {
-                                                            font-size: 1.1rem;
-                                                    }
-                                                    p, li, dd, dt, address {
-                                                        line-height: 1.5;
-                                                    }
-                                                    address {
-                                                        font-style:normal;
-                                                        margin:1rem 0;
-                                                    }
-                                                    </style>
-                                                    </head>
-                                                    <body>
-                                                    </body
-                                                    </html>
-     
+font-size: 16px;
+}
+body {
+max-width: 800px;
+margin: 0 auto;
+}
+.sender-column {
+text-align: right;
+}
+h1 {
+font-size: 1.5rem;
+}
+h2 {
+font-size: 1.3rem;
+}
+p, ul, ol, dl, address {
+font-size: 1.1rem;
+}
+p, li, dd, dt, address {
+line-height: 1.5;
+}
+address {
+font-style: normal;
+margin: 1rem 0;
+}
+</style>
                                                     Dr. Eleanor Gaye
 
                                                     <address>
