--- a/letter -markup/index.html
+++ b/letter -markup/index.html
@@ -33,10 +33,11 @@ font-style: normal;
 margin: 1rem 0;
 }
 </style>
+                                                    
+        <p=style="text-align:right">                                           
+    <address>                                                
                                                     Dr. Eleanor Gaye
 
-                                                    <address>
-<p>
 Awesome Science faculty<br>
 University of Awesome<br>
                                                     Bobtown, <abbr title="California">CA</abbr> 99999,<br>
