--- a/letter -markup/index.html
+++ b/letter -markup/index.html
@@ -89,7 +89,7 @@ Dover, CT9 XXX<br>
 <p>At the Awesome Science Faculty, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just the kind of <em>person</em> we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</p>
 <ul>
                                                                                                    <li>Turning H<sub>2</sub><sub>O</sub> into wine, and the health benefits of Resveratrol (C14H12O3.)</li>
-<li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 <sup>×</sup><sup> 103</sup> increasing to 3<sup> ×</sup><sup> 104</sup>.)</li>
+<li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 <sup>×</sup><sup>10</sup><sup>3</sup> increasing to 3<sup>×</sup><sup>10</sup><sup>4</sup>.)</li>
                                                     <li><abbr title="Hypertext Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheets">CSS</abbr> constructs for representing musical scores.</li>
                                                     </ul>
 
