--- a/letter -markup/index.html
+++ b/letter -markup/index.html
@@ -35,7 +35,7 @@ margin: 1rem 0;
 </style>
                                                     </head>
                                                     <body>
-                                                                                              
+            <div class="sender-column">                                                                                  
     <address>   
       <p>                                              
                                                     <strong>Dr. Eleanor Gaye</strong><br>
