--- a/index[1].html
+++ b/index[1].html
@@ -14,6 +14,7 @@
         
 <!-- PAGE HEADER -->        
         <!-- Wrap the top level heading in a header element -->
+        <header> bio</header>
             
             <h1>truffaut&nbsp;&nbsp;//&nbsp;&nbsp;portfolio</h1>
 
