--- a/index[1].html
+++ b/index[1].html
@@ -23,9 +23,10 @@
         <!-- Wrap the unordered list of links in a nav element -->
         <nav>
         <!-- Add the image "patricia-frost-125-edited-medium.jpg" right before the opening <ul> tag of the nav. Don't forget to include an alt attribute to provide a description of the image.-->
-            <div class="figure" 
+           <img>
+            <div class="figure"
                  <img src="patricia-frost-125-edited-medium.jpg"
-            alt="Patricia Frost photo" </div>
+            alt=Patricia Frost photo" </div>
             <ul>
                     <li><a href="letter-markup">Letter Markup</a></li>
                     <li><a href="planets-table">Planets Table</a></li>
