--- a/index[1].html
+++ b/index[1].html
@@ -25,9 +25,7 @@
         <!-- Add the image "patricia-frost-125-edited-medium.jpg" right before the opening <ul> tag of the nav. Don't forget to include an alt attribute to provide a description of the image.-->
             <div class="figure">
                  <img src="images/patricia-frost-125-edited-medium.jpg"
-                      alt="Patricia Frost photo"
-                      width="400"
-                      height="341">
+                      alt="Patricia Frost photo">
                                                </div>
             <ul>
                     <li><a href="letter-markup">Letter Markup</a></li>
@@ -98,9 +96,7 @@
         <figure>
             <div class="fig-1">
                <img src="images/puddle-1-medium.jpg"
-                  alt="A medium-sized puddle"
-                    width="400"
-                     height="341">
+                  alt="A medium-sized puddle">
                                  </div>
                                  <figcaption>A puddle naturally created on the ground</figcaption>
                                  </figure>
@@ -119,9 +115,7 @@
         <figure>
             <div class="fig-2">
                  <img src="images/puddle-2-medium.jpg"
-            alt="A puddle, that looks relatively big; appears to be deep as well"
-            width="400"
-                      height="341">
+            alt="A puddle, that looks relatively big; appears to be deep as well">
             </div>
                       
                 <figcaption>A puddle on the right side of the ground.</figcaption>
