--- a/planets-table/planets-table/index.html
+++ b/planets-table/planets-table/index.html
@@ -25,21 +25,22 @@
                 </caption>
                 <colgroup>
                    <col>
-                    <col>Name
-                    <col>Mass (10<sup>24</sup>kg)
-                    <col>Diameter (km)
-                    <col>Density (kg/m<sup>3</sup>)
-                    <col>Gravity (m/s<sup>2</sup>)
-                    <col>Length of day (hours)
-                    <col>Distance from Sun (10<sup>6</sup>km)
-                    <col>Mean temperature (°C)
-                    <col>Number of moons
-                    <col>Notes
-                    <col>Image
+                    <col span="11" class="Name">
+                    <col span="11" class="Mass (10<sup>24</sup>kg)">
+                    <col span="11" class="Diameter (km)">
+                    <col span="11" class="Density (kg/m<sup>3</sup>)">
+                    <col span="11" class="Gravity (m/s<sup>2</sup>)">
+                    <col span="11" class="Length of day (hours)">
+                    <col span="11" class="Distance from Sun (10<sup>6</sup>km)">
+                    <col span="11" class="Mean temperature (°C)">
+                    <col span="11" clas="Number of moons">
+                    <col span="11" class="Notes">
+                    <col span="11" class="Image">
                 </colgroup>
-                <thead>
-                    <tr>                   </tr>
-                </thead>
+                <th rowspan="4" colspan="2" scope="rowgroup">Terrestrial planets</th>
+                    
+                    <tr>             </tr>
+                
                 <tbody>
                 <tr></tr>
                     <tr></tr>
