--- a/planets-table/planets-table/index.html
+++ b/planets-table/planets-table/index.html
@@ -23,21 +23,20 @@
         <caption>
                 Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
                 </caption>
-                <thead>
-                <tr>
-               <td colspan="2"></td>
-   <th scope="col">Name</th>
-   <th scope="col">Mass (10<sup>24</sup>kg)</th>
-   <th scope="col">Diameter (km)</th>
-   <th scope="col">Density (kg/m<sup>3</sup>)</th>
-   <th scope="col">Gravity (m/s<sup>2</sup>)</th>
-   <th scope="col">Length of day (hours)</th>
-   <th scope="col">Distance from Sun (10<sup>6</sup>km)</th>
-   <th scope="col">Mean temperature (°C)</th>
-   <th scope="col">Number of moons</th>
-   <th scope="col">Notes</th>
-  </tr>
- </thead>
+                <colgroup>
+                    <col span="2" class="Name">
+                    <col span="2"  class="Mass (10<sup>24</sup>kg)">
+                    <col span="2"   class="Diameter (km)">
+                    <col span="2" class="Density (kg/m<sup>3</sup>)">
+                    <col span="2" class="Gravity (m/s<sup>2</sup>)">
+                    <col span="2" class="Length of day (hours)">
+                    <col span="2" class="Distance from Sun (10<sup>6</sup>km)">
+                    <col span="2" class="Mean temperature (°C)">
+                    <col span="2" class="Number of moons">
+                    <col span="2" class="Notes">
+                    <col span="2" class="Image">
+                </colgroup>
+ 
                 <tbody>
                 <tr>
    <th colspan="2" rowspan="4" scope="rowgroup">Terrestial planets</th>
