--- a/planets-table/planets-table/index.html
+++ b/planets-table/planets-table/index.html
@@ -24,6 +24,7 @@
                 Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
                 </caption>
                 <colgroup>
+                    <col>
                     <col span="2" class="Name">
                     <col span="2"  class="Mass (10<sup>24</sup>kg)">
                     <col span="2"   class="Diameter (km)">
