--- a/planets-table/planets-table/index.html
+++ b/planets-table/planets-table/index.html
@@ -37,8 +37,9 @@
                     <col span="2" class="Notes">
                     <col span="2" class="Image">
                 </colgroup>
-        <th>Name
-            </th>
+        <th>Name</th>
+                <th>Mass</th>
+                
                 <tbody>
                 <tr>
    <th colspan="2" rowspan="4" scope="rowgroup">Terrestial planets</th>
