--- a/planets-table/planets-table/index.html
+++ b/planets-table/planets-table/index.html
@@ -37,8 +37,11 @@
                     <col span="2" class="Notes">
                     <col span="2" class="Image">
                 </colgroup>
-                <th>
-                </th>
+              <tr> 
+                  <th scope="col">Name</th>
+                      <th scope="col">Mass (10<sup>24</sup>kg)</th>
+                </tr>
+                
                 <tbody>
                 <tr>
    <th colspan="2" rowspan="4" scope="rowgroup">Terrestial planets</th>
