--- a/planets-table/planets-table/index.html
+++ b/planets-table/planets-table/index.html
@@ -50,6 +50,7 @@
    <th scope="col">Mean temperature (°C)</th>
    <th scope="col">Number of moons</th>
    <th scope="col">Notes</th>
+      <th scope="col">Image</th>
   </tr>
  </thead>
                 
